# simu_ciae13c

./: .gitignore  CMakeLists.txt  fj13c_setup.par
analysis/: Analysis.cc  JunDict.cc  JunDict.h  Makefile  README.md
analysis/include/: JunDSSDAngle.hh  JunDataWriter.hh  JunParticle.hh  JunTreeReader.hh
analysis/range/: range.cc
analysis/script/: analysis.cc
analysis/src/: JunDSSDAngle.cc  JunDataWriter.cc  JunLossCorrection.cc  JunParMan.cc
analysis/testCut/: Makefile  testCut  testCut.cc
emit/: JunDict.cc  JunDict.h  README.md  nohup.out  particleInfo.cc
emit/include/: JunDataWriter.hh
genCS/: Makefile  fort2hist  genCS  genCS.cc  test.cc
include/: EmittingTreeRecorder.hh  JunPrimaryGeneratorAction.hh  myDetectorConstruction.hh  myEventAction.hh  myPhysicsList.hh  myTTreeRecorder.hh
src/: JunPrimaryGeneratorAction.cc  myEventAction.cc  mySSD.cc
unuse/: myAnalysis.hh  myCellSD.cc
v1_newchannel/: CMakeLists.txt  README.md  ciae13Cmc.cc  fj13c_setup.par  vis.mac
v1_newchannel/analysis/: Analysis.cc
v1_newchannel/analysis/include/: JunErrors.hh  JunLossCorrection.hh  JunParMan.hh
v1_newchannel/analysis/range/: Be_in_Be.txt  He_in_Be.txt
v1_newchannel/analysis/script/: analysis.cc
v1_newchannel/analysis/src/: JunDataWriter.cc
v1_newchannel/analysis/testCut/: 9Be_t1l.cc  testCut.cc
v1_newchannel/emit/: LinkDef.hh  Makefile  c1.C  particleInfo.cc
v1_newchannel/emit/include/: JunTreeReader.hh
v1_newchannel/emit/src/: JunDataWriter.cc  JunParticle.cc  JunTreeReader.cc
v1_newchannel/genCS/: Makefile  README.md  loadDAT.cc  readDAT.cc
v1_newchannel/include/: EmittingTreeRecorder.hh  JunParMan.hh  JunPrimaryGeneratorAction.hh  myEventAction.hh  myHit.hh  myRunAction.hh  mySSD.hh
v1_newchannel/src/: EmittingTreeRecorder.cc  JunParMan.cc  JunPrimaryGeneratorAction.cc  myDetectorConstruction.cc  myEventAction.cc  myPhysicsList.cc  myRunAction.cc  mySSD.cc  myTTreeRecorder.cc
v1_newchannel/unuse/: myCellSD.hh  myPiece.cc  myPiece.hh  myPrimaryGeneratorAction.cc  myTele.hh
version1.0/: ciae13c.cc  fj13c_setup.par
version1.0/analysis/: Analysis.cc
version1.0/analysis/include/: JunDSSDAngle.hh  JunDataWriter.hh
version1.0/analysis/range/: Be_in_Si.txt  He_in_Si.txt
version1.0/analysis/src/: JunDSSDAngle.cc  JunParticle.cc  JunTreeReader.cc
version1.0/analysis/testCut/: alpha_t1l.cc  testCut.cc
version1.0/emit/include/: JunParticle.hh
version1.0/genCS/: README.md  test.cc
version1.0/src/: myDetectorConstruction.cc  myEventAction.cc  myHit.cc  myRunAction.cc
version1.0/unuse/: myPrimaryGeneratorAction.hh  myTele.cc
